--- a/app/src/main/res/layout/activity_choose_quiz.xml
+++ b/app/src/main/res/layout/activity_choose_quiz.xml
@@ -7,6 +7,15 @@
     tools:context="com.example.shican.quizcreator.ChooseQuiz"
     android:orientation="vertical">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolBar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@android:color/holo_green_light"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        android:layout_alignParentTop="true"/>
+
     <TextView
         android:id="@+id/chooseQuiz"
         android:layout_width="match_parent"
