--- a/app/src/main/res/layout/activity_display_quiz.xml
+++ b/app/src/main/res/layout/activity_display_quiz.xml
@@ -7,42 +7,42 @@
     android:layout_height="match_parent"
     tools:context="com.example.shican.quizcreator.DisplayQuiz">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolBar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@android:color/holo_green_light"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        android:layout_alignParentTop="true"/>
+
     <TextView
         android:id="@+id/yourQuiz"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/hint"
-        android:layout_alignBottom="@+id/hint"
-        android:layout_toStartOf="@+id/checkAnswer"
+        android:layout_alignTop="@+id/hint"
+        android:layout_toStartOf="@+id/hint"
         android:text="@string/yourQuiz"
-        android:textAlignment="center"
-        android:textSize="20sp" />
+        android:textSize="15sp" />
+
+    <Button
+        android:id="@+id/hint"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/toolBar"
+        android:layout_marginTop="14dp"
+        android:text="@string/hint" />
+
 
     <FrameLayout
         android:id="@+id/quizContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/checkAnswer"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/hint">
+        android:layout_height="380dp"
+        android:layout_below="@+id/hint"
+        android:layout_marginStart="12dp">
 
-        <TextView
-            android:id="@+id/quizDetail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="20sp" />
     </FrameLayout>
-
-    <EditText
-        android:id="@+id/enterAnswer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_toStartOf="@id/checkAnswer"
-        android:ems="10"
-        android:hint="Enter your answer here"
-        android:inputType="textPersonName" />
 
     <Button
         android:id="@+id/checkAnswer"
@@ -52,12 +52,23 @@
         android:layout_alignParentEnd="true"
         android:text="@string/checkAnswer" />
 
-    <Button
-        android:id="@+id/hint"
-        android:layout_width="wrap_content"
+    <EditText
+        android:id="@+id/enterAnswer"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:text="@string/hint" />
+        android:layout_alignParentBottom="true"
+        android:layout_toStartOf="@+id/checkAnswer"
+        android:ems="10"
+        android:hint="Enter your answer here"
+        android:inputType="textPersonName" />
+
+    <TextView
+        android:id="@+id/quizDetail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/yourQuiz"
+        android:layout_toStartOf="@+id/hint"
+        android:textSize="20sp"/>
+
 
 </RelativeLayout>
