--- a/app/src/main/res/layout/activity_oc_delete.xml
+++ b/app/src/main/res/layout/activity_oc_delete.xml
@@ -53,12 +53,20 @@
         android:layout_centerHorizontal="true"
         android:text="@string/submit" />
 
+    <Button
+        android:id="@+id/back"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/submit"
+        android:layout_marginStart="0dp"
+        android:text="@string/back" />
+
     <ListView
         android:id="@+id/listviewMain"
         android:layout_width="wrap_content"
         android:layout_height="376dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
+        android:layout_below="@+id/back"
         android:stackFromBottom="true"
         android:transcriptMode="alwaysScroll" />
 
