--- a/app/src/main/res/layout/activity_dentist_fragment_detail.xml
+++ b/app/src/main/res/layout/activity_dentist_fragment_detail.xml
@@ -3,19 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.jian0080.finalproject.DoctorFragmentDetailActivity">
+    tools:context="com.example.shican.quizcreator.DentistFragmentDetailActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/BraceLayout"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true">
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="5dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Braces"
+            android:text="Had braces"
             android:id="@+id/textView_braces"
             android:layout_alignParentStart="true" />
         <RadioGroup
@@ -41,7 +42,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/MedicalBenefitLayout"
-        android:layout_below="@+id/BraceLayout">
+        android:layout_below="@+id/BraceLayout"
+        android:layout_marginStart="5dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
