--- a/app/src/main/res/layout/activity_patient_list.xml
+++ b/app/src/main/res/layout/activity_patient_list.xml
@@ -5,6 +5,19 @@
     android:layout_height="match_parent"
     tools:context="com.example.shican.quizcreator.PatientListActivity">
 
+    <ProgressBar
+        android:id="@+id/indeterminateBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:minWidth="200dp"
+        android:minHeight="20dp"
+        android:visibility="invisible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        />
+
+
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolBar"
         android:layout_width="match_parent"
@@ -27,24 +40,31 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true">
+        android:layout_alignParentBottom="true"
+        android:background="@android:color/holo_green_light">
+
         <Button
             android:id="@+id/import_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Import"
-            android:layout_alignParentStart="true"/>
+            android:layout_alignParentStart="true"
+            android:elevation="2dp"
+            android:text="Import" />
+
         <Button
             android:id="@+id/statistic_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Statistics"
-            android:layout_centerHorizontal="true"/>
+            android:layout_centerHorizontal="true"
+            android:elevation="2dp"
+            android:text="Statistics" />
+
         <Button
             android:id="@+id/add_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Add"
-            android:layout_alignParentEnd="true"/>
+            android:layout_alignParentEnd="true"
+            android:elevation="2dp"
+            android:text="Add" />
     </RelativeLayout>
 </RelativeLayout>
