--- a/app/src/main/res/layout/activity_record_detail.xml
+++ b/app/src/main/res/layout/activity_record_detail.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.jian0080.finalproject.RecordDetailActivity">
+    tools:context="com.example.shican.quizcreator.RecordDetailActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolBar"
@@ -17,7 +17,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:layout_below="@+id/toolBar">
+        android:layout_below="@+id/toolBar"
+        android:layout_marginStart="5dp">
         <TextView
             android:layout_width="100dp"
             android:layout_height="wrap_content"
@@ -36,7 +37,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/line1"
-        android:layout_marginTop="5dp">
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="5dp">
         <TextView
             android:layout_width="100dp"
             android:layout_height="wrap_content"
@@ -55,7 +57,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/line2"
-        android:layout_marginTop="5dp">
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="5dp">
         <TextView
             android:layout_width="100dp"
             android:layout_height="wrap_content"
@@ -74,7 +77,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/line3"
-        android:layout_marginTop="5dp">
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="5dp">
         <TextView
             android:layout_width="100dp"
             android:layout_height="wrap_content"
@@ -86,29 +90,13 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"/>
     </LinearLayout>
-    <!--    <LinearLayout
-            android:id="@+id/line5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/line4"
-            android:layout_marginTop="5dp">
-            <TextView
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="Gender"
-                android:textAppearance="?android:attr/textAppearanceLarge"/>
-            <TextView
-                android:id="@+id/gender_input"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"/>
-        </LinearLayout>-->
     <LinearLayout
         android:id="@+id/line6"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/line4"
-        android:layout_marginTop="5dp">
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="5dp">
         <TextView
             android:layout_width="160dp"
             android:layout_height="wrap_content"
@@ -125,7 +113,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/line6"
-        android:layout_marginTop="5dp">
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="5dp">
         <TextView
             android:layout_width="210dp"
             android:layout_height="wrap_content"
@@ -142,7 +131,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/line7"
-        android:layout_marginTop="5dp">
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="5dp">
         <TextView
             android:layout_width="120dp"
             android:layout_height="wrap_content"
@@ -159,7 +149,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/line8"
-        android:layout_marginTop="5dp">
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="5dp">
         <TextView
             android:layout_width="160dp"
             android:layout_height="wrap_content"
@@ -169,14 +160,16 @@
             android:id="@+id/patient_type_input"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"/>
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            />
     </LinearLayout>
     <LinearLayout
         android:id="@+id/line10"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/line9"
-        android:layout_marginTop="5dp">
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="5dp">
         <TextView
             android:id="@+id/question_1"
             android:layout_width="180dp"
@@ -193,7 +186,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/line10"
-        android:layout_marginTop="5dp">
+        android:layout_marginTop="5dp"
+        android:layout_marginStart="5dp">
         <TextView
             android:id="@+id/question_2"
             android:layout_width="180dp"
@@ -208,25 +202,32 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true">
+        android:layout_alignParentBottom="true"
+        android:background="@android:color/holo_green_light">
+
         <Button
             android:id="@+id/delete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Delete"
-            android:layout_alignParentStart="true"/>
+            android:layout_alignParentStart="true"
+            android:elevation="2dp"
+            android:text="Delete" />
+
         <Button
             android:id="@+id/ok"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="OK"
-            android:layout_centerHorizontal="true"/>
+            android:layout_centerHorizontal="true"
+            android:elevation="2dp"
+            android:text="OK" />
+
         <Button
             android:id="@+id/edit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Edit"
-            android:layout_alignParentEnd="true"/>
+            android:layout_alignParentEnd="true"
+            android:elevation="2dp"
+            android:text="Edit" />
     </RelativeLayout>
 
 </RelativeLayout>
