--- a/app/src/main/res/layout/list_item_optometrist.xml
+++ b/app/src/main/res/layout/list_item_optometrist.xml
@@ -13,5 +13,6 @@
         android:id="@+id/patient_info_view"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:layout_marginStart="5dp"/>
 </LinearLayout>
