--- a/app/src/main/res/layout/activity_registration_form.xml
+++ b/app/src/main/res/layout/activity_registration_form.xml
@@ -36,7 +36,7 @@
             android:id="@+id/name"
             android:layout_alignTop="@+id/textView_name"
             android:layout_centerHorizontal="true"
-            android:hint="Enter your name.."
+            android:hint="Enter your name..."
             android:layout_marginStart="10dp"/>
     </RelativeLayout>
     <RelativeLayout
@@ -84,7 +84,7 @@
             android:ems="10"
             android:id="@+id/age"
             android:layout_toRightOf="@+id/textView_age"
-            android:hint="Enter your age.."
+            android:hint="Enter your age..."
             android:layout_marginStart="10dp"/>
     </RelativeLayout>
     <RelativeLayout
@@ -151,7 +151,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Healthe Card Number"
+            android:text="Healthe Card"
             android:id="@+id/textView_health_card_number"
             android:layout_alignParentStart="true" />
 
@@ -160,7 +160,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/textView_health_card_number"
-            android:hint="Health card number.."
+            android:hint="Health card number..."
             android:inputType="text|textCapCharacters|date"
             android:layout_marginStart="10dp"/>
 
