--- a/app/src/main/res/layout/activity_optometrist_fragment_detail.xml
+++ b/app/src/main/res/layout/activity_optometrist_fragment_detail.xml
@@ -16,7 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Glasses date"
+            android:text="@string/text_glasses_date"
             android:id="@+id/textView_glasses_date"
             android:layout_alignParentStart="true" />
 
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_toEndOf="@+id/textView_glasses_date"
             android:layout_toRightOf="@+id/textView_glasses_date"
-            android:hint="Enter your glasses purchse date..."
+            android:hint="@string/hint_glasses_date"
             android:inputType="date"
             android:layout_marginStart="5dp"/>
     </RelativeLayout>
@@ -41,7 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Glasses Store"
+            android:text="@string/text_glasses_store"
             android:id="@+id/textView_glasses_store"
             android:layout_alignParentStart="true"
             />
@@ -52,7 +52,7 @@
             android:layout_height="wrap_content"
             android:layout_toEndOf="@+id/textView_glasses_store"
             android:layout_toRightOf="@+id/textView_glasses_store"
-            android:hint="Enter your glasses purchase store..."
+            android:hint="@string/hint_glasses_store"
             android:inputType="text"
             android:layout_marginStart="5dp"/>
     </RelativeLayout>
