--- a/app/src/main/res/layout/activity_record_detail.xml
+++ b/app/src/main/res/layout/activity_record_detail.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Name:"
+            android:text="@string/text_name"
             />
         <TextView
             android:id="@+id/name_input"
@@ -42,7 +42,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Address:"
+            android:text="@string/text_address"
             android:textAppearance="?android:attr/textAppearanceLarge"
             />
         <TextView
@@ -62,7 +62,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Age:"
+            android:text="@string/text_age"
             android:textAppearance="?android:attr/textAppearanceLarge"
             />
         <TextView
@@ -82,7 +82,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Birthday:"
+            android:text="@string/text_birthday"
             android:textAppearance="?android:attr/textAppearanceLarge"/>
         <TextView
             android:id="@+id/birthday_input"
@@ -101,7 +101,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Phone number:"
+            android:text="@string/text_phone_number"
             android:textAppearance="?android:attr/textAppearanceLarge"/>
         <TextView
             android:id="@+id/phone_number_input"
@@ -120,7 +120,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Health card:"
+            android:text="@string/text_health_card"
             android:textAppearance="?android:attr/textAppearanceLarge"/>
         <TextView
             android:id="@+id/health_card_number_input"
@@ -139,7 +139,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Description:"
+            android:text="@string/text_description"
             android:textAppearance="?android:attr/textAppearanceLarge"/>
         <TextView
             android:id="@+id/description_input"
@@ -158,7 +158,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Patien type:"
+            android:text="@string/text_patient_type"
             android:textAppearance="?android:attr/textAppearanceLarge"/>
         <TextView
             android:id="@+id/patient_type_input"
@@ -220,7 +220,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:elevation="2dp"
-            android:text="Delete" />
+            android:text="@string/btn_delete" />
 
         <Button
             android:id="@+id/ok"
@@ -228,7 +228,7 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:elevation="2dp"
-            android:text="OK" />
+            android:text="@string/btn_ok" />
 
         <Button
             android:id="@+id/edit"
@@ -236,7 +236,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:elevation="2dp"
-            android:text="Edit" />
+            android:text="@string/btn_edit" />
     </RelativeLayout>
 
 </RelativeLayout>
