added Chinese language support. added fragments for adding new quizzes. added items in settings (help, import, stats) minor adjustments.

--- a/app/src/main/res/menu/project_main_actions.xml
+++ b/app/src/main/res/menu/project_main_actions.xml
@@ -28,8 +28,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" app:showAsAction="always"
         android:icon="@drawable/octranspo"/>
+
     <item android:id="@+id/help"
         android:icon="@drawable/help"
         android:title="Help"
         app:showAsAction="never"/>
+
+    <item android:id="@+id/import_resource"
+        android:icon="@drawable/import_resource"
+        android:title="Import"
+        app:showAsAction="never"/>
+
+    <item android:id="@+id/stats"
+        android:icon="@drawable/import_resource"
+        android:title="@string/Stats"
+        app:showAsAction="never"/>
+
 </menu>
