--- a/app/src/main/res/layout/activity_create_quiz.xml
+++ b/app/src/main/res/layout/activity_create_quiz.xml
@@ -6,29 +6,56 @@
     android:layout_height="match_parent"
     tools:context="com.example.shican.quizcreator.CreateQuiz">
 
+    <Button
+        android:id="@+id/mc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/toolBar"
+        android:gravity="start"
+        android:text="@string/mc" />
+
+    <Button
+        android:id="@+id/nu"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/toolBar"
+        android:layout_toEndOf="@+id/tf"
+        android:text="@string/nu" />
+
+    <Button
+        android:id="@+id/tf"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/toolBar"
+        android:layout_centerHorizontal="true"
+        android:layout_toEndOf="@id/mc"
+        android:text="@string/tf" />
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolBar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@android:color/holo_green_light"
+        android:background="@android:color/holo_orange_light"
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         android:layout_alignParentTop="true"/>
-
-    <EditText
-        android:id="@+id/question"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/typeHere"
-        android:inputType="textPersonName"
-        android:layout_below="@id/toolBar"/>
 
     <Button
         android:id="@+id/save"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/question"
-        android:text="@string/save"
-        />
+        android:layout_below="@id/container"
+        android:text="@string/save" />
+
+
+    <FrameLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="350dp"
+        android:layout_below="@+id/mc" >
+
+    </FrameLayout>
+
+
 </RelativeLayout>
