--- a/app/src/main/res/layout/activity_project_main.xml
+++ b/app/src/main/res/layout/activity_project_main.xml
@@ -12,7 +12,7 @@
         android:id="@+id/toolBar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@android:color/holo_green_light"
+        android:background="@android:color/white"
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
 
