added Chinese language support. added fragments for adding new quizzes. added items in settings (help, import, stats) minor adjustments.

--- a/app/src/main/res/layout/quiz_row.xml
+++ b/app/src/main/res/layout/quiz_row.xml
@@ -6,12 +6,18 @@
     android:orientation="horizontal"
     >
 
-    <TextView
-        android:id="@+id/quizRow"
+    <ImageView
+        android:id="@+id/icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:srcCompat="@drawable/quiz"
+        android:contentDescription="@string/icon"/>
+
+    <TextView
+        android:id="@+id/quizRow"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:gravity="start"
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="20sp" />
 
