--- a/app/src/main/res/layout/activity_oc_delete.xml
+++ b/app/src/main/res/layout/activity_oc_delete.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/toolBar"
-        android:text="@string/delRoute"
+        android:text="@string/oc_delStop"
         android:textAlignment="center"
         android:textSize="20sp" />
 
@@ -43,7 +43,7 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/inProgress"
         android:ems="10"
-        android:hint="@string/typeoc" />
+        android:hint="@string/oc_enterStop" />
 
     <Button
         android:id="@+id/submit"
@@ -51,7 +51,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/delete"
         android:layout_centerHorizontal="true"
-        android:text="@string/submit" />
+        android:text="@string/oc_submit" />
 
     <Button
         android:id="@+id/back"
@@ -60,7 +60,7 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/submit"
         android:layout_marginStart="0dp"
-        android:text="@string/back" />
+        android:text="@string/oc_back" />
 
     <ListView
         android:id="@+id/listviewMain"
