--- a/app/src/main/res/layout/activity_oc_infor.xml
+++ b/app/src/main/res/layout/activity_oc_infor.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/toolBar"
-        android:text="@string/routeInfo"
+        android:text="@string/oc_routeInfo"
         android:textAlignment="center"
         android:textSize="20sp" />
 
@@ -43,7 +43,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="20dp"
-        android:text="@string/done" />
+        android:text="@string/oc_done" />
 
     <ListView
         android:id="@+id/list"
